Add HTML readme files and update index to direct to them

--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@ $(document).ready(function () {
 <ul>
 <li><p>HW 1</p>
 <ul>
-<li><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-01">Github link</a></li>
+<li><a href="./assignments/hw-01/README.html">README</a></li>
 </ul></li>
 <li><p>HW 2</p>
 <ul>
-<li><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-02">Github link</a></li>
+<li><a href="./assignments/hw-02/README.html">README</a></li>
 </ul></li>
 <li><p>HW 3</p>
 <ul>
-<li><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-03">Github link</a></li>
+<li><a href="./assignments/hw-03/README.html">README</a></li>
 </ul></li>
 <li><p>HW 4</p>
 <ul>
-<li><p><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-04">Github link</a></p></li>
+<li><p><a href="./assignments/hw-04/README.html">README</a></p></li>
 <li><p><a href="./assignments/hw-04/docs/_build/html/index.html">Documentation</a></p></li>
 </ul></li>
 </ul>
