--- a/assignments/hw-04/README.html
+++ b/assignments/hw-04/README.html
@@ -122,44 +122,38 @@ $(document).ready(function () {
 <div id="description" class="section level3">
 <h3>Description</h3>
 <p>This README is intended to guide the user in how to use HW-04.</p>
-<p>The README is written in Markdown, and is much easier to read on GitHub:</p>
-<p><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-03" class="uri">https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-03</a></p>
-<p>Documentation for the modules is hosted by github pages at</p>
+<p>The assignment is hosted on github here:</p>
+<p><a href="https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-04" class="uri">https://github.com/DavisVaughan/uncc-math-6204/tree/master/assignments/hw-04</a></p>
 </div>
 <div id="general" class="section level3">
 <h3>General</h3>
 <ul>
 <li>Author - Davis Vaughan</li>
-<li>Date - 9/21/2017</li>
-<li>Homework - 03</li>
+<li>Date - 10/04/2017</li>
+<li>Homework - 04</li>
 </ul>
 </div>
 <div id="purpose" class="section level3">
 <h3>Purpose</h3>
-<p>The purpose of this module is to calculate the Monte Carlo value of European options in multiple ways using varying methods of accuracy.</p>
-</div>
-<div id="comments" class="section level3">
-<h3>Comments</h3>
-<p>IMPORTANT! - The seed is set at the C++ level using Numba, not at the Python level. Because of this, we will not get the same results unless you implement this with Numba. Setting a seed of 100 at the C++ level will generate a different stream of random numbers than setting a seed of 100 at the Python level.</p>
+<p>The purpose of this module is to calculate the Monte Carlo value of American options using the regression 1 approach from the Tools for Computational Finance book.</p>
 </div>
 <div id="thoughts-on-numerical-accuracy" class="section level3">
 <h3>Thoughts on numerical accuracy</h3>
-<p>It seems like using a smaller time step seems to greatly increase the accuracy. Adding the second order term did not help the accuracy as much as I had expected. The biggest benefits seem to come from increasing the number of simulations. Using n = 50000 greatly increases the accuracy of the final results.</p>
+<p>I am not sure how accurate these values are. The European option value is ~28 for the same parameters, and I can’t imagine the price of the American option being a lot more than that. It should obviously be more expensive, but I don’t think it should be &gt;10 dollars more.</p>
 </div>
 <div id="numerical-methods-used" class="section level3">
 <h3>Numerical methods used</h3>
 <ul>
-<li><p>Both Euler and Milstein discretization of GBM were used to simulate the sample paths.</p></li>
-<li><p>Using the value of S_T from the sample paths, the average payoffs of the option were calculated, and discounted back to time zero.</p></li>
-<li><p>The exact solution to the GBM SDE was also used to compare accuracy results.</p></li>
+<li><p>The Euler discretization of GBM was used to simulate the sample paths.</p></li>
+<li><p>This method prices the American option using a regression method. The continuation value at time t is calculated by regressing the discounted value of the option at time t+1 on the price at time t. The continuation value is then compared to the value of the payoff at time t, and the max is chosen as the value of the option at t.</p></li>
 </ul>
 </div>
 <div id="included-files" class="section level3">
 <h3>Included files</h3>
-<p><code>main.py</code> - (DRIVER) a demo of the GBM functions using the parameters set in the HW-2 pdf.</p>
-<p><code>gbm_simulator.py</code> - The functions that generate the stock price simulations using either Euler or Miltstein methods.</p>
-<p><code>option_value.py</code> - Functions to calculate the value of the option from the simulated values.</p>
-<p><code>option_value_exact.py</code> - Previous HW code to generate the exact value of the options.</p>
+<p><code>main.py</code> - (DRIVER) Simulates the GBM and calculates the American option values at different degrees of accuracy.</p>
+<p><code>gbm_simulator.py</code> - The functions that generate the stock price simulations using Euler methods.</p>
+<p><code>option_value.py</code> - The <code>price_option()</code> function in this file is the interface that prices the option based on the user’s inputs. It dispatches to find the correct pricing function using the functions in <code>option_value_dispatch.py</code>.</p>
+<p><code>option_value_dispatch.py</code> - These function support <code>option_value.py</code> and are used to return the correct option pricing function (European VS American and Call VS Put).</p>
 </div>
 <div id="how-to-run" class="section level3">
 <h3>How to run</h3>
@@ -170,26 +164,12 @@ $(document).ready(function () {
 <p>Within your command line / terminal, navigate to the folder containing the main.py script, and just run:</p>
 <pre class="bash"><code>python2 main.py</code></pre>
 <p>^ Make sure you are using python2.</p>
-<p>A plot will pop up first with the 5 paths, and once you close the plot a numpy array will be printed to the console that looks like this:</p>
-<pre class="python"><code>   MC_option_value algorithm call_put    dt  exact_option_value option_type  \
-0        28.189921     euler     call   .01           28.684884    european   
-1        29.255651     euler      put   .01           28.198446    european   
-2        28.164755     euler     call  .001           28.684884    european   
-3        28.579581     euler      put  .001           28.198446    european   
-4        27.931396  milstein     call   .01           28.684884    european   
-5        29.136742  milstein      put   .01           28.198446    european   
-6        28.118083  milstein     call  .001           28.684884    european   
-7        28.570122  milstein      put  .001           28.198446    european   
-
-   absolute_error  
-0        0.494962  
-1        1.057205  
-2        0.520129  
-3        0.381135  
-4        0.753487  
-5        0.938296  
-6        0.566800  
-7        0.371676 </code></pre>
+<p>A pandas data frame should output:</p>
+<pre class="python"><code>   MC_option_value call_put    dt option_type
+0        43.226182     call   .01    american
+1        37.582431      put   .01    american
+2        45.613229     call  .001    american
+3        41.250757      put  .001    american</code></pre>
 </div>
 
 
