--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@ $(document).ready(function () {
 <li><p><a href="./assignments/hw-04/README.html">README</a></p></li>
 <li><p><a href="./assignments/hw-04/docs/_build/html/index.html">Documentation</a></p></li>
 </ul></li>
+<li><p>HW 5</p>
+<ul>
+<li><p><a href="./assignments/hw-05/README.html">README</a></p></li>
+<li><p><a href="./assignments/hw-05/docs/_build/html/index.html">Documentation</a></p></li>
+</ul></li>
 </ul>
 
 
