--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@ $(document).ready(function () {
 <li><p><a href="./assignments/hw-05/README.html">README</a></p></li>
 <li><p><a href="./assignments/hw-05/docs/_build/html/index.html">Documentation</a></p></li>
 </ul></li>
+<li><p>HW 6</p>
+<ul>
+<li><p><a href="./assignments/hw-06/README.html">README</a></p></li>
+<li><p><a href="./assignments/hw-06/docs/_build/html/index.html">Documentation</a></p></li>
+</ul></li>
 </ul>
 
 
