update index and sync others

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@ $(document).ready(function () {
 <li><p><a href="./assignments/hw-06/README.html">README</a></p></li>
 <li><p><a href="./assignments/hw-06/docs/_build/html/index.html">Documentation</a></p></li>
 </ul></li>
+<li><p>HW 7</p>
+<ul>
+<li><a href="./assignments/hw-07/README.html">README</a></li>
+</ul></li>
 </ul>
 
 
