update index with hw8

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ $(document).ready(function () {
 <ul>
 <li><a href="./assignments/hw-07/README.html">README</a></li>
 </ul></li>
+<li><p>HW 8</p>
+<ul>
+<li><a href="./assignments/hw-08/README.html">README</a></li>
+</ul></li>
 </ul>
 
 
